<resources>
    <string name="app_name">PhoneList</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="sign_up_ok">Sign Up OK</string>
    <string name="sign_up_error">Sign Up Error</string>
    <string name="login_error">Login error</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="insert_ok">Insert OK</string>
    <string name="insert_error">Insert Error</string>
    <string name="delete">Delete</string>
    <string name="update_error">Update Error</string>
    <string name="update_ok">Update OK</string>
    <string name="delete_ok">Delete OK</string>
    <string name="delete_error">Delete Error</string>
    <string name="new_contact">New Contact</string>
    <string name="select_an_image">Select an image</string>
    <string name="remove_image">Remove Image</string>
    <string name="contact_details">Contact Details</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="contact">Contact</string>
    <string name="send_by_phonelist_app">Send by PhoneList APP</string>
    <string name="choose_email_client">Choose email client</string>
</resources>